<resources>
    <string name="app_name">Project1-Calculator</string>

    <string name="display_text">0</string>

    <string name="clear_button_text">C</string>
    <string name="pos_neg_button_text">+/-</string>
    <string name="percent_button_text">%</string>
    <string name="div_button_text">/</string>
    <string name="seven_button_text">7</string>
    <string name="eight_button_text">8</string>
    <string name="nine_button_text">9</string>
    <string name="mult_button_text">x</string>
    <string name="four_button_text">4</string>
    <string name="five_button_text">5</string>
    <string name="six_button_text">6</string>
    <string name="minus_button_text">-</string>
    <string name="one_button_text">1</string>
    <string name="two_button_text">2</string>
    <string name="three_button_text">3</string>
    <string name="plus_button_text">+</string>
    <string name="zero_button_text">0</string>
    <string name="decimal_button_text">.</string>
    <string name="equals_button_text">=</string>

</resources>